--- a/projects/forms-ng/package.json
+++ b/projects/forms-ng/package.json
@@ -1,9 +1,9 @@
 {
   "name": "forms-ng",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "peerDependencies": {
-    "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/common": "> 2",
+    "@angular/core": "> 2"
   },
   "dependencies": {
     "session-object": "^1.0.4"
