--- a/projects/forms-ng/package.json
+++ b/projects/forms-ng/package.json
@@ -1,6 +1,7 @@
 {
+  "type": "module",
   "name": "forms-ng",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "peerDependencies": {
     "@angular/common": "> 2",
     "@angular/core": "> 2"
